--- a/xprez/static/xprez/styles/scss/frontend/_layout.scss
+++ b/xprez/static/xprez/styles/scss/frontend/_layout.scss
@@ -6,7 +6,7 @@
 }
 
 @mixin full-width () {
-	@include cont-width(100%)
+	@include cont-width($full-width)
 }
 
 .xprez-full-width {
